nginx-proxy-dotnet/kube/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx
