nginx-proxy-dotnet/kube/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: 1dd27cfa.ngrok.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
  tls:
  - hosts:
    - 1dd27cfa.ngrok.io
    secretName: nginx-tls
